fix: Mobile Sharing Item alignement
It nows :
- hide on desktop resolution
- displayed on medium screen but without avatar list at the
end of the line since there are displayed in the toolbar
- displayed on small screen with avatars at the end

--- a/src/drive/styles/toolbar.styl
+++ b/src/drive/styles/toolbar.styl
@@ -55,20 +55,18 @@
             color var(--pomegranate)
             background embedurl('../assets/icons/icon-trash-red.svg') 1rem center no-repeat
         &.fil-action-share
+            position relative
             background embedurl('../assets/icons/icon-share-dark.svg') 1rem center no-repeat
         &.fil-action-create-note
             background embedurl('../assets/icons/icons-16-icon-note.svg') 1rem center no-repeat
         &.fil-action-create-shortcut
             background embedurl('../assets/icons/icon-link.svg') 1rem center no-repeat
-
-            .fil-toolbar-menu-recipients
-                position absolute
-                right    1rem
-                top      .1rem
-
+    .fil-toolbar-menu-recipients
+        position absolute
+        right    1rem
+        top      .1rem
     .fil-action-share
         display none
-
 +medium-screen()
     .fil-toolbar-menu
         display block
@@ -77,7 +75,9 @@
         .fil-action-select
         .fil-action-upload
             display block
-
++tablet()
+    .fil-toolbar-menu-recipients
+            display none
 +small-screen()
     .fil-toolbar-inner-menu
         position fixed
@@ -92,7 +92,9 @@
 
     .fil-public-download
         display none
-
+    .fil-toolbar-menu
+        .fil-toolbar-menu-recipients
+            display inline-flex 
 +small-screen('min')
     .fil-toolbar-menu--public
         display none
